FIX: Units are aligned and edit is done for the entire version.

--- a/_attachments/traduxio.css
+++ b/_attachments/traduxio.css
@@ -28,6 +28,9 @@ a {color:inherit; text-decoration:none; }
 /*pagination*/
 body,html {
   height:100%;
+}
+
+body,html,input,textarea {
   font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
